<resources>
    <string name="app_name">MVPArms</string>

    <string name="one_text">Be kind one another</string>


    <string name="pre_refresh_data" translatable="false">refresh_data</string>
    <string name="pre_get_image" translatable="false">get_image</string>
    <string name="pre_cache_size" translatable="false">cache_size</string>
    <string name="pre_feedback" translatable="false">feedback</string>
    <string name="pre_author" translatable="false">author</string>
    <string name="pre_version" translatable="false">version</string>
    <string name="pre_nav_color" translatable="false">pre_nav_color</string>
    <string name="pre_use_local" translatable="false">pre_use_local</string>
    <string name="pre_status_bar" translatable="false">pre_status_bar</string>


    <string name="snack_infor">请检查网络</string>

    <string name="transition_shot_background" translatable="false">shot_background</string>
    <string name="transition_shot" translatable="false">shot</string>

    <string name="nevigation_item" translatable="false">nevigation_item</string>

    <string name="zhihu" translatable="false">知乎日报</string>
    <string name="topnews" translatable="false">网易头条</string>
    <string name="meizi" translatable="false">每日看看</string>

    <string name="filter" translatable="false">打开</string>
    <string name="about" translatable="false">关于</string>


    <string name="transition_topnew" translatable="false">topnewsimage</string>
    <string name="transition_topnew_linear" translatable="false">topnewlinear</string>

    <string name="meizitips" translatable="false">每日推送一个漂亮妹子和经典视频,看不看随小主!(长按保存图片)</string>
    <string name="meiziaction" translatable="false">我懂</string>

    <string name="save_meizi" translatable="false">小主好眼力,快收了她</string>

    <string name="about_text" translatable="false">感谢对项目的支持和关注,项目会不断的升级更新,如果小主感兴趣欢迎一起来贡献,有好的想法也可以随时发email给我.</string>
    <string name="email" translatable="false">maat.xing@gmail.com</string>
</resources>
